res/examples/invalid/call_noncallable_bool.eg
true();
false();

// out: TypeError: bool is not callable
// out: TypeError: bool is not callable